Prevent wrapping of text in tables

--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -40,6 +40,11 @@
         margin-top: 1em;
     }
 
+    td {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
 }
 
 .instance-info {
